gcc/testsuite/go.dg/goto-1.go
// { dg-do compile }

package main

func main() {
  goto lab;	// { dg-error "undefined label" }
}
